--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Send Email with AJAX</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Send Email</h1>
